--- a/packages/demo/src/components/Draggable/index.mdx
+++ b/packages/demo/src/components/Draggable/index.mdx
@@ -1,3 +1,5 @@
+import Props from './props.mdx';
+
 # Draggable 拖拽
 
 一个轻量级，高性能的用于 React 的可扩展拖放组件。
@@ -42,7 +44,7 @@
   <Droppable />
 </CodeBlock>
 
-## 🌟 拖拽排序
+## 拖拽排序
 
 拖拽排序（Drag-and-drop sorting）是一种广泛实用的交互设计手法。支持用户进行垂直、水平以及网格布局的拖拽排序。
 
@@ -71,3 +73,5 @@
 <CodeBlock style={{ flexWrap: 'nowrap' }}>
   <MultipleContainer />
 </CodeBlock>
+
+<Props />
