--- a/packages/demo/src/components/Popover/index.mdx
+++ b/packages/demo/src/components/Popover/index.mdx
@@ -1,10 +1,14 @@
+import Props from './props.mdx';
+
 # Popover
 
-<div className="title">基本用法</div>
+## 基本用法
 <CodeBlock line={'5-7'}>
-  <Base/>
+  <Base />
 </CodeBlock>
-<div className="title">设置触发popover的条件</div>
+## 设置触发popover的条件
 <CodeBlock line={'5-7'}>
-  <Trigger/>
+  <Trigger />
 </CodeBlock>
+
+<Props />
