feat: [icon] 使用svgr优化

--- a/packages/demo/src/components/Skeleton/props.mdx
+++ b/packages/demo/src/components/Skeleton/props.mdx
@@ -1,4 +1,4 @@
 import Table from '../table.tsx'
-export const params = [{"key":"className","value":": string","optional":true,"version":"1.0.0","description":"自定义类名"},{"key":"style","value":": React.CSSProperties","optional":true,"version":"1.0.0","description":"自定义样式"},{"key":"style","value":": React.CSSProperties & CardCssTokens","optional":true,"version":"1.0.0","description":"自定义样式","default":"undefined"},{"key":"active","value":": boolean","optional":true,"version":"1.0.0","description":"是否展示动画效果","default":"false"},{"key":"avatar","value":": boolean","optional":true,"version":"1.0.0","description":"头像占位","default":"false"},{"key":"loading","value":": boolean","optional":true,"version":"1.0.0","description":"是否加载","default":"undefined"},{"key":"row","value":": number","optional":true,"version":"1.0.0","description":"自定义条数","default":"4"},{"key":"title","value":": boolean","optional":true,"version":"1.0.0","description":"标题","default":"false"},{"key":"brick","value":": boolean","optional":true,"version":"1.0.0","description":"块状","default":"false"}]
+export const params = [{"key":"className","value":": string","optional":true,"version":"1.0.0","description":"自定义类名"},{"key":"style","value":": React.CSSProperties","optional":true,"version":"1.0.0","description":"自定义样式"},{"key":"style","value":": React.CSSProperties & SkeletonCssTokens","optional":true,"version":"1.0.0","description":"自定义样式","default":"undefined"},{"key":"active","value":": boolean","optional":true,"version":"1.0.0","description":"是否展示动画效果","default":"false"},{"key":"avatar","value":": boolean","optional":true,"version":"1.0.0","description":"头像占位","default":"false"},{"key":"loading","value":": boolean","optional":true,"version":"1.0.0","description":"是否加载","default":"undefined"},{"key":"row","value":": number","optional":true,"version":"1.0.0","description":"自定义条数","default":"4"},{"key":"title","value":": boolean","optional":true,"version":"1.0.0","description":"标题","default":"false"},{"key":"brick","value":": boolean","optional":true,"version":"1.0.0","description":"块状","default":"false"}]
 ## API 列表
 <Table name='skeleton' params={params}/>
