feat: sidebar click scroll

--- a/packages/demo/src/components/Button/index.mdx
+++ b/packages/demo/src/components/Button/index.mdx
@@ -4,7 +4,7 @@ import Props from './props.mdx';
 
 ## 普通样式
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="普通样式">
   <Button type="primary">按钮</Button>
   <Button>按钮</Button>
   <Button type="text">按钮</Button>
@@ -12,7 +12,7 @@ import Props from './props.mdx';
 
 ## 可禁用样式
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="可禁用样式">
   <Button type="primary" disabled>
     按钮
   </Button>
@@ -24,7 +24,7 @@ import Props from './props.mdx';
 
 ## 按钮尺寸大小
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="按钮尺寸大小">
   <Button size="small">small</Button>
   <Button size="middle">middle</Button>
   <Button size="large">large</Button>
@@ -32,7 +32,7 @@ import Props from './props.mdx';
 
 ## 自定义 css 颜色（token）
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="自定义">
   <Button
     style={{
       '--button-background-color': 'rgb(233, 233, 15)',
@@ -44,13 +44,13 @@ import Props from './props.mdx';
 
 ## 点击事件
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="点击事件">
   <OnClick />
 </CodeBlock>
 
-## loading加载中和节流、防抖
+## loading 加载中和节流、防抖
 
-<CodeBlock line={'5-1009'}>
+<CodeBlock line={'5-1009'} id="loading加载中和节流、防抖">
   <Loading />
 </CodeBlock>
 
