--- a/packages/demo/src/components/Draggable/index.mdx
+++ b/packages/demo/src/components/Draggable/index.mdx
@@ -16,7 +16,7 @@ import Props from './props.mdx';
 
 下面是一个最基础的拖拽实例，可以用鼠标任意拖拽实例中的元素。
 
-<CodeBlock>
+<CodeBlock id="基本示例">
   <Basic />
 </CodeBlock>
 
@@ -24,7 +24,7 @@ import Props from './props.mdx';
 
 拖拽组件支持自定义渲染正在处于拖拽过程中的元素。
 
-<CodeBlock>
+<CodeBlock id="拖拽过程中的元素">
   <WithDragOverlay />
 </CodeBlock>
 
@@ -32,7 +32,7 @@ import Props from './props.mdx';
 
 支持设置可拖拽的区域。
 
-<CodeBlock>
+<CodeBlock id="设置可拖拽区域">
   <WithHandler />
 </CodeBlock>
 
@@ -40,7 +40,7 @@ import Props from './props.mdx';
 
 支持拖拽并放置到指定区域
 
-<CodeBlock>
+<CodeBlock id="拖放案例">
   <Droppable />
 </CodeBlock>
 
@@ -50,19 +50,19 @@ import Props from './props.mdx';
 
 ### 垂直方向拖拽
 
-<CodeBlock>
+<CodeBlock id="垂直方向拖拽">
   <VerticalSortable />
 </CodeBlock>
 
 ### 水平方向拖拽
 
-<CodeBlock>
+<CodeBlock id="水平方向拖拽">
   <HorizenSortable />
 </CodeBlock>
 
 ### 网格拖拽
 
-<CodeBlock>
+<CodeBlock id="网格拖拽">
   <GridSortable />
 </CodeBlock>
 
@@ -70,7 +70,7 @@ import Props from './props.mdx';
 
 支持多个容器之间进行拖拽排序的场景
 
-<CodeBlock style={{ flexWrap: 'nowrap' }}>
+<CodeBlock style={{ flexWrap: 'nowrap' }} id="多容器拖拽（垂直）">
   <MultipleContainer />
 </CodeBlock>
 
