--- a/packages/demo/src/components/Input/index.mdx
+++ b/packages/demo/src/components/Input/index.mdx
@@ -3,22 +3,22 @@ import Props from './props.mdx';
 # Input
 
 ## 基本用法
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="基本用法">
   <Base />
 </CodeBlock>
 
 ## 输入框尺寸
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="输入框尺寸">
   <Size />
 </CodeBlock>
 
 ## 固定前缀和后缀
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="固定前缀和后缀">
   <Prepend />
 </CodeBlock>
 
 ## 密码框
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="密码框">
   <Password />
 </CodeBlock>
 
