--- a/packages/demo/src/components/Popover/index.mdx
+++ b/packages/demo/src/components/Popover/index.mdx
@@ -3,11 +3,11 @@ import Props from './props.mdx';
 # Popover
 
 ## 基本用法
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="基本用法">
   <Base />
 </CodeBlock>
 ## 设置触发popover的条件
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="设置触发popover的条件">
   <Trigger />
 </CodeBlock>
 
