feat: sidebar click scroll

--- a/packages/demo/src/components/Modal/index.mdx
+++ b/packages/demo/src/components/Modal/index.mdx
@@ -6,7 +6,7 @@
 
 最基本的模态对话框用法
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="基本用法">
   <Common />
 </CodeBlock>
 
@@ -14,7 +14,7 @@
 
 提供自定义底部按钮，可以通过 `OkButtonProps`，`cancelButtonProps` 控制 Button，还可以传入 `footer` 来自定义模态框的底部。
 
-<CodeBlock line={'7-11'}>
+<CodeBlock line={'7-11'} id="底部按钮组定制">
   <FooterRow />
 </CodeBlock>
 
@@ -22,7 +22,7 @@
 
 通过 `position` 属性，从而改变模态框的出现位置。
 
-<CodeBlock line={'7-11'}>
+<CodeBlock line={'7-11'} id="弹窗出现位置">
   <Position />
 </CodeBlock>
 
@@ -30,7 +30,7 @@
 
 你可以通过给 `hasMask` 传入 `false` 来关闭模态框的蒙层。
 
-<CodeBlock line={'7-11'}>
+<CodeBlock line={'7-11'} id="蒙层动作自定义">
   <Mask />
 </CodeBlock>
 
@@ -38,6 +38,6 @@
 
 你可以使用 `Modal.show(props)` 的方式来调起一个模态框。
 
-<CodeBlock line={'7-11'}>
+<CodeBlock line={'7-11'} id="声明式调用">
   <UseModal />
 </CodeBlock>
