--- a/packages/demo/src/components/Card/index.mdx
+++ b/packages/demo/src/components/Card/index.mdx
@@ -10,7 +10,7 @@ import Props from './props.mdx';
 
 一个简单的卡片用法。
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="默认样式">
   <Card title={<div>测试</div>} time="19:20 2020-09-15" extra={<More />} actions={<Actions></Actions>}>
     <div>
       <p>我好想买Airpods但是没有钱，梁老师可不可以资助我 一点钱钱呢啊？不多不多的 </p>
@@ -21,7 +21,7 @@ import Props from './props.mdx';
 
 通过 avatar 属性来添加头像。
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="带头像">
   <Card
     title={<div>多余文本</div>}
     time="19:20 2020-09-15"
@@ -43,7 +43,7 @@ import Props from './props.mdx';
 
 利用 Grid 属性，实现栅格布局。
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="栅格">
   <Card
     avatar={<img src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png" width="35" height="35" />}
     title={<div style={{ fontSize: '18px', fontWeight: '700', marginTop: '10px' }}>运动小天才</div>}
@@ -64,7 +64,7 @@ import Props from './props.mdx';
 
 通过 css 变量实现展示内容的长度。
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="收起与展开长度">
   <Card
     title={<div>多余文本</div>}
     time="19:20 2020-09-15"
@@ -103,7 +103,7 @@ import Props from './props.mdx';
 
 自定义更改卡片的样式。
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="自定义背景颜色和宽度">
   <Card
     title={<div>多余文本</div>}
     time="19:20 2020-09-15"
@@ -124,7 +124,7 @@ import Props from './props.mdx';
 
 数据读入前会有文本块样式。
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="加载中">
   <Loading />
 </CodeBlock>
 
