--- a/packages/demo/src/components/Icon/index.mdx
+++ b/packages/demo/src/components/Icon/index.mdx
@@ -4,25 +4,25 @@ import Props from './props.mdx';
 
 ## 基本用法
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="基本用法">
   <IconList />
 </CodeBlock>
 
 ## 定义颜色和透明度
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="定义颜色和透明度">
   <Color />
 </CodeBlock>
 
 ## 尺寸
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="尺寸">
   <Size />
 </CodeBlock>
 
 ## 自定义样式与旋转
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="自定义样式与旋转">
   <Style />
 </CodeBlock>
 
