--- a/packages/demo/src/components/Skeleton/index.mdx
+++ b/packages/demo/src/components/Skeleton/index.mdx
@@ -4,31 +4,31 @@ import Props from './props.mdx';
 
 ## 普通样式
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="普通样式">
   <Skeleton style={{ width: '380px' }}></Skeleton>
 </CodeBlock>
 
 ## 带标题
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="带标题">
   <Skeleton style={{ width: '380px' }} title={true}></Skeleton>
 </CodeBlock>
 
 ## 带头像
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="带头像">
   <Skeleton style={{ width: '380px' }} avatar={true}></Skeleton>
 </CodeBlock>
 
 ## 块状
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="块状">
   <Skeleton style={{ width: '380px', height: '90px' }} brick={true}></Skeleton>
 </CodeBlock>
 
 ## 静态
 
-<CodeBlock line={'5-7'}>
+<CodeBlock line={'5-7'} id="静态">
   <Skeleton style={{ width: '380px', '--skeleton-active': 'false' }}></Skeleton>
 </CodeBlock>
 
