--- a/packages/demo/src/components/Switch/index.mdx
+++ b/packages/demo/src/components/Switch/index.mdx
@@ -8,7 +8,7 @@ Switch 开关是用于切换两种互斥状态的常见控件。
 
 你可以直接通过`<Switch />`来渲染一个开关，此时该组件是一个非受控组件，你可以通过`defaultValue`来给开关控制它的初始值。
 
-<CodeBlock>
+<CodeBlock id="基本用法">
   <Base />
 </CodeBlock>
 
@@ -16,7 +16,7 @@ Switch 开关是用于切换两种互斥状态的常见控件。
 
 你可以通过 size 指定尺寸。目前可以指定`normal`、`large`两种尺寸类型。
 
-<CodeBlock>
+<CodeBlock id="尺寸">
   <Size />
 </CodeBlock>
 
@@ -24,7 +24,7 @@ Switch 开关是用于切换两种互斥状态的常见控件。
 
 你可以通过 `checkedText` 和 `uncheckedText` 来展示不同状态下的文本，还支持可以传入一个 Icon。
 
-<CodeBlock>
+<CodeBlock id="文本展示">
   <Text />
 </CodeBlock>
 
@@ -32,6 +32,6 @@ Switch 开关是用于切换两种互斥状态的常见控件。
 
 你可以传入`value`、`onChange`属性来让开关变成受控组件。
 
-<CodeBlock>
+<CodeBlock id="受控组件">
   <Controlled />
 </CodeBlock>
