feat: 引入unified解析mdast生成目录数据结构

--- a/packages/demo/src/components/Button/index.mdx
+++ b/packages/demo/src/components/Button/index.mdx
@@ -35,7 +35,7 @@ import Props from './props.mdx';
 <CodeBlock line={'5-7'} id="自定义">
   <Button
     style={{
-      '--button-background-color': 'rgb(233, 233, 15)',
+      '--button-background-color': 'rgb(233, 233, 15)'
     }}
   >
     button
