--- a/packages/demo/src/components/Editor/index.mdx
+++ b/packages/demo/src/components/Editor/index.mdx
@@ -4,7 +4,7 @@ import Props from './props.mdx';
 
 ## 基本用法
 
-<CodeBlock id="基本示例">
+<CodeBlock id="基本示例" style={{ padding: 0 }}>
   <Base />
 </CodeBlock>
 
