feat: tabs卡片样式&global bg token

--- a/packages/demo/src/components/Tabs/index.mdx
+++ b/packages/demo/src/components/Tabs/index.mdx
@@ -8,4 +8,10 @@ import Props from './props.mdx';
   <Base />
 </CodeBlock>
 
+## 卡片样式 type = `'card'`
+
+<CodeBlock id="基本示例">
+  <CardType />
+</CodeBlock>
+
 <Props />
