feat: 引入react、react-dom types

--- a/packages/demo/src/components/Editor/props.mdx
+++ b/packages/demo/src/components/Editor/props.mdx
@@ -1,7 +1,4 @@
-import Table from '../table.tsx';
-
-export const params = [];
-
-## API 列表
-
-<Table name="input" params={params} />
+import Table from '../table.tsx'
+export const params = []
+## API 列表
+<Table name='editor' params={params}/>
